[gd_scene load_steps=3 format=3 uid="uid://bqxhvn3mf7klt"]

[ext_resource type="Script" path="res://core/systems/debug_console.gd" id="1_console"]
[ext_resource type="FontFile" uid="uid://cqlbwopye8b43" path="res://assets/fonts/monogram.ttf" id="2_font"]

[node name="DebugConsole" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_console")

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.85, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "DEBUG CONSOLE"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HotkeyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.65, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "[F1/F12/~]"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OutputLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
scroll_following = true

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InputContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = ">"

[node name="InputLine" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_colors/caret_color = Color(0.6, 0.8, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
placeholder_text = "Type a command..."
flat = true
